<resources>
    <string name="app_name">TaskMe</string>
    <string name="add">ADD ITEM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_editview">Edit</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_delete">Delete</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="app_title">TaskMe</string>
    <string name="add_task_name_prompt">Enter the name of the task</string>
    <string name="add_task_name">Name</string>
    <string name="add_task_due">Due</string>
    <string name="add_task_category">Category</string>
    <string name="choose_date_hint">Choose due date</string>
    <string name="save_button_text">Save</string>
    <string name="category_hint">Enter the category</string>
    <string name="add_task">Add a Task</string>
    <string name="task_update">Task Update</string>
    <string name="navigation_header">Navigation Header</string>
    <string name="to_do">To Do</string>
    <string name="done">Done</string>
    <string name="stats">Stats</string>
    <string name="mark_completed">MARK COMPLETED</string>
    <string name="what_to_do">What to do</string>
    <string name="pop_up_due_date">DUE:</string>
    <string name="mark_completed_button">MARK COMPLETED</string>
    <string name="what_was_done">What was done</string>
    <string name="pop_up_done_date">DONE:</string>
    <string name="done_by_deadline">done by deadline</string>
    <string name="num_placeholder">0</string>
    <string name="done_after_due">done after due</string>
    <string name="past_due">past due</string>
    <string name="to_be_done">to be done</string>
    <string name="total_tasks">Total Tasks</string>
</resources>
