<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">

    <TextView
        android:id="@+id/name_title"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/add_task_name"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/due_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486"></TextView>

    <EditText
        android:id="@+id/name_input"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/add_task_name_prompt"
        app:layout_constraintBottom_toTopOf="@+id/due_date_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496" />

    <TextView
        android:id="@+id/due_title"
        android:layout_width="59dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="@string/add_task_due"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/category_title"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/due_date_input"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="68dp"
        android:hint="@string/choose_date_hint"
        app:layout_constraintBottom_toTopOf="@+id/category_input"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/category_title"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="292dp"
        android:gravity="center"
        android:text="@string/add_task_category"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/category_input"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="292dp"
        android:hint="@string/category_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/discard_button"
        android:layout_width="132dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#E80D0D"
        android:text="@string/discard_button_text"
        android:onClick="cancelButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_title" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="132dp"
        android:layout_height="58dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#2ACE63"
        android:text="@string/save_button_text"
        android:onClick="saveButton"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_input"
        app:layout_constraintVertical_bias="0.512" />


</androidx.constraintlayout.widget.ConstraintLayout>